Use StandardCharsets.UTF_8 constant instead of "UTF-8" literal. (#646)
GitOrigin-RevId: a83416ba6e4be0f0dbeeb7a09e1919cef49e8d7b