@@ -19,10 +19,8 @@ package com.hazelcast.internal.ascii.memcache;
 import com.hazelcast.internal.ascii.TextCommandConstants;
 import com.hazelcast.internal.ascii.TextCommandService;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-
-import static java.lang.String.format;
+import java.nio.charset.StandardCharsets;
 
 public class DeleteCommandProcessor extends MemcacheCommandProcessor<DeleteCommand> {
 
@@ -33,11 +31,7 @@ public class DeleteCommandProcessor extends MemcacheCommandProcessor<DeleteComma
     @Override
     public void handle(DeleteCommand command) {
         String key;
-        try {
-            key = URLDecoder.decode(command.getKey(), "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException(format("failed to decode key [%s] using UTF-8", command.getKey()));
-        }
+        key = URLDecoder.decode(command.getKey(), StandardCharsets.UTF_8);
         String mapName = DEFAULT_MAP_NAME;
         int index = key.indexOf(':');
         if (index != -1) {
