@@ -21,12 +21,11 @@ import com.hazelcast.internal.ascii.TextCommand;
 import com.hazelcast.internal.ascii.memcache.ErrorCommand;
 import com.hazelcast.internal.nio.ascii.TextDecoder;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.StringTokenizer;
 
 import static com.hazelcast.internal.ascii.TextCommandConstants.TextCommandType.ERROR_CLIENT;
-import static com.hazelcast.internal.ascii.TextCommandConstants.TextCommandType.ERROR_SERVER;
 
 abstract class HttpCommandParser<HC extends HttpCommand> implements CommandParser {
 
@@ -40,12 +39,8 @@ abstract class HttpCommandParser<HC extends HttpCommand> implements CommandParse
         } else {
             return new ErrorCommand(ERROR_CLIENT);
         }
-        try {
-            String urlDecodedUri = URLDecoder.decode(uri, "UTF-8");
-            return createHttpCommand(decoder, urlDecodedUri);
-        } catch (UnsupportedEncodingException e) {
-            return new ErrorCommand(ERROR_SERVER, "UTF-8 encoding is not supported by JVM!");
-        }
+        String urlDecodedUri = URLDecoder.decode(uri, StandardCharsets.UTF_8);
+        return createHttpCommand(decoder, urlDecodedUri);
     }
 
     abstract HC createHttpCommand(TextDecoder decoder, String uri);
